[tool.poetry]
name = "ruption"
version = "2.2.2"
description = "Impl subset of Rust's Option/Result and utilities with good type hinting"
authors = ["phantie <funtom1605@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = { version = "^4.12.2", python = "<3.10" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
